@@ -4,11 +4,13 @@
 * Timeout charge retry is now up to 1000 seconds
 * Fixed toggle switch bug at charging
 * Fixed charging issue with same charge/discharge port
-* High current path (HC) related code removed
+* High current path (HC) related code from DiebieMS removed
 * Default settings are now set for Master-LV
 * LTC6812 & LTC6813 complete support
-* Balancing mask are now uint_32t
+* Balancing mask are now all uint_32t
 * Precharge : "persistent" option is now renamed to "forced"
+* Min/Max Charge & discharge temperatures protections are now funtionnal
+* Support for new Master-HV onboard precharge relay on PC15
 
 === FW 1.0 ===
 * ENNOID-BMS Master initial release
